--- a/public/screen.css
+++ b/public/screen.css
@@ -9,4 +9,77 @@ html {
 body {
   margin: 0;
   min-height: 100%;
+  color: rgb(28, 28, 28);
+  height: 100%;
+  max-width: auto;
+  width: auto;
+}
+
+h1 {
+  text-align: center;
+  font-family: monospace;
+  margin: 1rem 0 3rem 0;
+}
+
+header {
+  width: fit-content;
+}
+
+main {
+  width: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+section {
+  min-width: 20rem;
+  border: thin solid #7c7c7c;
+  border-radius: 0.3rem;
+  margin-bottom: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+section h2,
+section p {
+  text-align: center;
+}
+
+section h3 {
+  margin: 1rem 0;
+  font-family: monospace;
+  font-size: 3rem;
+}
+
+fieldset {
+  padding-left: 0%;
+  padding-right: 0%;
+  border: none;
+}
+
+fieldset input {
+  padding: 0.5rem;
+}
+
+fieldset i {
+  margin: 0 0.2rem;
+}
+
+fieldset i.add {
+  color: green;
+}
+
+fieldset i.subtract {
+  color: rgb(240, 54, 54);
+}
+
+fieldset button {
+  margin: 1rem;
+  padding: 0.4rem;
+}
+
+#Reset {
+  margin: 0 100vw;
 }
